# EPA141A-Model-Based-Decision-Making

./: .gitignore  environment.yml  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: deploy-book.yml
JUSTICE/: .gitignore  CITATION.cff  JUSTICE_example_run.ipynb  README.md  pyproject.toml  run_optimization.py
JUSTICE/.github/workflows/: pytest.yml
JUSTICE/analysis/: hpc_run.py  momadps_config.json  normative_uncertainty_optimization.json
JUSTICE/analysis/hpc_slurm_scripts/: mm_borg_exclusive.sh  mm_justice.sh  run_single_agent_array.sh
JUSTICE/data/input/: R10_regions.json  R5_regions.json
JUSTICE/docs/: rl_docs.md
JUSTICE/justice/: model.py
JUSTICE/justice/util/: EMA_model_wrapper.py  borg_archive_processor.py  enumerations.py  feature_importance.py  output_data_processor.py  pareto_nash_run.py  postprocessing_for_regret_calculations.py  visualizer.py  (+2 more)
_build/logs/: myst.build.json
assignments_ema/: assignment_01_exploratory_modeling.ipynb  assignment_02_sensitivity_analysis.ipynb  assignment_03_scenario_discovery.ipynb  assignment_04_problem_formulation.ipynb  assignment_08_robustness.ipynb
config/: config_ssp370.json
docs/: _config.yml  _toc.yml  intro.md  lectures.md  resources.md  schedule.md  start-here.md
docs/_static/: custom.css  setup_and_orientation.html
docs/assignments/: assignment_01.md  assignment_02.md  assignment_03.md  assignment_04.md  assignment_05.md  assignment_06.md  assignment_07.md  assignment_08.md  index.md
docs/debate/: actors.md  index.md  stages.md
docs/installation/: cli.md  graphical.md  index.md  vscode.md
docs/labs/: index.md  lab_02.md  lab_03.md  lab_04.md  lab_06.md
docs/project/: index.md
labs/: dps_lake_model.py  lab_01_exploratory_modelling.ipynb  lab_02_sensitivity_analysis.ipynb  lab_03_scenario_discovery.ipynb  lab_04_moea_setup_and_optimization.ipynb  lab_05_pareto_analysis_convergence.ipynb  lab_06_mordm.ipynb  lakemodel_function.py
(+73 files in other folders)
