[tool.poetry]
name = "epa141a"
version = "0.1.0"
description = "EPA141A Model-Based Decision Making — course environment (TU Delft)"
authors = ["TU Delft <mbdm@tudelft.nl>"]
readme = "README.md"

# Include JUSTICE-main source packages directly so that `justice`, `solvers`,
# and `analysis` are importable without modifying JUSTICE-main at all.
packages = [
    { include = "justice",  from = "JUSTICE-main" },
    { include = "solvers",  from = "JUSTICE-main" },
    { include = "analysis", from = "JUSTICE-main" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4"

# ── JUSTICE core (RL/ML stack excluded — not used in assignments 1-8) ─────────
fair          = "==2.1.3"
h5py          = ">=3.10.0"
platypus-opt  = ">=1.1.0"
ema-workbench = ">=3.0,<4.0"
scipy         = ">=1.10.0"
deap          = ">=1.4.0"
ipyparallel   = ">=8.6.1"
plotly        = ">=5.19.0"
pycountry     = ">=24.6.1"
numpy         = ">=1.26"          # 1.26+ has Python 3.12+ wheels

# ── Assignments 1-8 ───────────────────────────────────────────────────────────
pandas        = ">=2.0,<3.0"          # 3.0 LossySetitemError breaks ema-workbench 2.5.x
matplotlib    = ">=3.7"
seaborn       = ">=0.13"
SALib         = ">=1.4"           # A2: sensitivity analysis
geopandas     = ">=0.14"          # A7: world maps
tqdm          = ">=4.0"           # A1, A2, A3, A8: progress bars

# ── Notebook environment ──────────────────────────────────────────────────────
jupyterlab    = ">=4.0"
ipywidgets    = ">=8.0"
ipykernel     = ">=6.0"
kaleido       = ">=0.2"           # plotly static image export (A7)
# altair — DO NOT install: ≥6.0 raises TypeError on Python 3.14, breaking ema_workbench.analysis.
# ema_workbench[graph] pulls it in transitively — avoid that extra. Fix: pip uninstall altair

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
